complete list-of-entries page

--- a/e/index.html
+++ b/e/index.html
@@ -20,32 +20,34 @@
 				E
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/persons/politician/eberl-irmfried/index.html">Eberl, Irmfried</a></li>
-					<li><a href="/witnesses/victim/edelman-salman/index.html">Edelman, Salman</a></li>
-					<li><a href="/persons/ehrenburg-ilya/index.html">Ehrenburg, Ilya</a></li>
-					<li><a href="/e/eichmann-adolf/index.html">Eichmann, Adolf</a></li>
-					<li><a href="/e/einsatzgruppen/index.html">Einsatzgruppen</a></li>
-					<li><a href="/witnesses/victim/eisenschmidt-eliezer/index.html">Eisenschmidt, Eliezer</a></li>
-					<li><a href="/persons/legal-professional/eitan-dov/index.html">Eitan, Dov</a></li>
-					<li><a href="/plans-orders/emigration/index.html">Emigration</a></li>
-					<li><a href="/witnesses/victim/engel-chaim/index.html">Engel, Chaim</a></li>
-					<li><a href="/witnesses/victim/epstein-berthold/index.html">Epstein, Berthold</a></li>
-					<li><a href="/witnesses/perpetrator/erber-josef/index.html">Erber, Josef</a></li>
-					<li><a href="/e/escapes-from-gas-chamber/index.html">Escapes, from Gas Chamber</a></li>
-					<li><a href="/event/euthanasia/index.html">Euthanasia</a></li>
-					<li><a href="/e/euthanasia/index.html">Euthanasia</a></li>
-					<li><a href="/e/evacuations-from-german-camps/index.html">Evacuations, from German Camps</a></li>
-					<li><a href="/categories/concepts/evidence/index.html">Evidence</a></li>
-					<li><a href="/e/exaggerated-death-tolls/index.html">Exaggerated Death Tolls</a></li>
-					<li><a href="/e/excavations-of-german-mass-graves/index.html">Excavations, of German Mass Graves</a></li>
-					<li><a href="/e/execution-chambers/index.html">Execution Chambers</a></li>
-					<li><a href="/e/exotic-murder-weapons/index.html">Exotic Murder Weapons</a></li>
-					<li><a href="/e/explosives-as-a-murder-weapon/index.html">Explosives, as a Murder Weapon</a></li>
-					<li><a href="/e/explosives-to-erase-corpses/index.html">Explosives, to Erase Corpses</a></li>
-					<li><a href="/e/extermination-camps/index.html">Extermination Camps</a></li>
-					<li><a href="/categories/concepts/extirpation/index.html">Extirpation (<i>Ausrottung, Vernichtung</i>)</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/persons/politician/eberl-irmfried/index.html">Eberl, Irmfried</a></li>
+						<li><a href="/witnesses/victim/edelman-salman/index.html">Edelman, Salman</a></li>
+						<li><a href="/persons/ehrenburg-ilya/index.html">Ehrenburg, Ilya</a></li>
+						<li><a href="/e/eichmann-adolf/index.html">Eichmann, Adolf</a></li>
+						<li><a href="/e/einsatzgruppen/index.html">Einsatzgruppen</a></li>
+						<li><a href="/witnesses/victim/eisenschmidt-eliezer/index.html">Eisenschmidt, Eliezer</a></li>
+						<li><a href="/persons/legal-professional/eitan-dov/index.html">Eitan, Dov</a></li>
+						<li><a href="/plans-orders/emigration/index.html">Emigration</a></li>
+						<li><a href="/witnesses/victim/engel-chaim/index.html">Engel, Chaim</a></li>
+						<li><a href="/witnesses/victim/epstein-berthold/index.html">Epstein, Berthold</a></li>
+						<li><a href="/witnesses/perpetrator/erber-josef/index.html">Erber, Josef</a></li>
+						<li><a href="/e/escapes-from-gas-chamber/index.html">Escapes, from Gas Chamber</a></li>
+						<li><a href="/event/euthanasia/index.html">Euthanasia</a></li>
+						<li><a href="/e/euthanasia/index.html">Euthanasia</a></li>
+						<li><a href="/e/evacuations-from-german-camps/index.html">Evacuations, from German Camps</a></li>
+						<li><a href="/categories/concepts/evidence/index.html">Evidence</a></li>
+						<li><a href="/e/exaggerated-death-tolls/index.html">Exaggerated Death Tolls</a></li>
+						<li><a href="/e/excavations-of-german-mass-graves/index.html">Excavations, of German Mass Graves</a></li>
+						<li><a href="/e/execution-chambers/index.html">Execution Chambers</a></li>
+						<li><a href="/e/exotic-murder-weapons/index.html">Exotic Murder Weapons</a></li>
+						<li><a href="/e/explosives-as-a-murder-weapon/index.html">Explosives, as a Murder Weapon</a></li>
+						<li><a href="/e/explosives-to-erase-corpses/index.html">Explosives, to Erase Corpses</a></li>
+						<li><a href="/e/extermination-camps/index.html">Extermination Camps</a></li>
+						<li><a href="/categories/concepts/extirpation/index.html">Extirpation (<i>Ausrottung, Vernichtung</i>)</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
