--- a/g/index.html
+++ b/g/index.html
@@ -20,48 +20,50 @@
 				G
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/witnesses/victim/gabai-dario/index.html">Gabai, Dario</a></li>
-					<li><a href="/witnesses/victim/gabai-yaakov/index.html">Gabai, Yaakov</a></li>
-					<li><a href="/witnesses/victim/gal-gyula/index.html">Gál, Gyula</a></li>
-					<li><a href="/witnesses/victim/garbarz-moshe/index.html">Garbarz, Moshé</a></li>
-					<li><a href="/g/gas-chamber/index.html">Gas Chamber</a></li>
-					<li><a href="/g/gas-vans/index.html">Gas Vans</a></li>
-					<li><a href="/technologies/gastight-doors/index.html">Gastight Doors</a></li>
-					<li><a href="/legal/company/gaubschat-company/index.html">Gaubschat Company</a></li>
-					<li><a href="/categories/concepts/generalplan-ost/index.html">Generalplan Ost</a></li>
-					<li><a href="/categories/concept/genocide/index.html">Genocide</a></li>
-					<li><a href="/categories/concepts/genocide/index.html">Genocide</a></li>
-					<li><a href="/locations/country/germany/index.html">Germany</a></li>
-					<li><a href="/witnesses/perpetrator/gerstein-kurt/index.html">Gerstein, Kurt</a></li>
-					<li><a href="/witnesses/victim/gertner-szaja/index.html">Gertner, Szaja</a></li>
-					<li><a href="/g/geysers-of-blood-from-mass-graves/index.html">Geysers of Blood, from Mass Graves</a></li>
-					<li><a href="/g/ghettos/index.html">Ghettos</a></li>
-					<li><a href="/witnesses/victim/glazar-richard/index.html">Glazar, Richard</a></li>
-					<li><a href="/witnesses/perpetrator/globocnik-odilo/index.html">Globocnik, Odilo</a></li>
-					<li><a href="/persons/glucks-richard/index.html">Glücks, Richard</a></li>
-					<li><a href="/persons/politician/goebbels-joseph/index.html">Goebbels, Joseph</a></li>
-					<li><a href="/witnesses/victim/gol-szloma/index.html">Gol, Szloma</a></li>
-					<li><a href="/objects/gold-teeth/index.html">Gold Teeth</a></li>
-					<li><a href="/witnesses/victim/goldberg-szymon/index.html">Goldberg, Szymon</a></li>
-					<li><a href="/witnesses/victim/goldfarb-abraham-i/index.html">Goldfarb, Abraham I.</a></li>
-					<li><a href="/persons/goring-hermann/index.html">Göring, Hermann</a></li>
-					<li><a href="/persons/goth-amon/index.html">Göth, Amon</a></li>
-					<li><a href="/witnesses/perpetrator/grabner-maximilian/index.html">Grabner, Maximilian</a></li>
-					<li><a href="/witnesses/victim/gradowski-salmen/index.html">Gradowski, Salmen</a></li>
-					<li><a href="/witnesses/false-witness/gray-martin/index.html">Gray, Martin</a></li>
-					<li><a href="/locations/country/greece/index.html">Greece</a></li>
-					<li><a href="/witnesses/victim/grocher-mietek/index.html">Grocher, Mietek</a></li>
-					<li><a href="/witnesses/victim/grojanowski-jakov/index.html">Grojanowski, Jakov</a></li>
-					<li><a href="/witnesses/perpetrator/groning-oskar/index.html">Gröning, Oskar</a></li>
-					<li><a href="/instruments/camp/phantom-camp/gross-rosen/index.html">Gross-Rosen</a></li>
-					<li><a href="/persons/grossman-vasily/index.html">Grossman, Vasily</a></li>
-					<li><a href="/categories/concepts/groundwater-level/index.html">Groundwater Level</a></li>
-					<li><a href="/witnesses/victim/gruner-miklos/index.html">Grüner, Miklós</a></li>
-					<li><a href="/witnesses/victim/gulba-franciszek/index.html">Gulba, Franciszek</a></li>
-					<li><a href="/instruments/camp/other-camp/gusen/index.html">Gusen</a></li>
-					<li><a href="/g/gypsies/index.html">Gypsies</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/witnesses/victim/gabai-dario/index.html">Gabai, Dario</a></li>
+						<li><a href="/witnesses/victim/gabai-yaakov/index.html">Gabai, Yaakov</a></li>
+						<li><a href="/witnesses/victim/gal-gyula/index.html">Gál, Gyula</a></li>
+						<li><a href="/witnesses/victim/garbarz-moshe/index.html">Garbarz, Moshé</a></li>
+						<li><a href="/g/gas-chamber/index.html">Gas Chamber</a></li>
+						<li><a href="/g/gas-vans/index.html">Gas Vans</a></li>
+						<li><a href="/technologies/gastight-doors/index.html">Gastight Doors</a></li>
+						<li><a href="/legal/company/gaubschat-company/index.html">Gaubschat Company</a></li>
+						<li><a href="/categories/concepts/generalplan-ost/index.html">Generalplan Ost</a></li>
+						<li><a href="/categories/concept/genocide/index.html">Genocide</a></li>
+						<li><a href="/categories/concepts/genocide/index.html">Genocide</a></li>
+						<li><a href="/locations/country/germany/index.html">Germany</a></li>
+						<li><a href="/witnesses/perpetrator/gerstein-kurt/index.html">Gerstein, Kurt</a></li>
+						<li><a href="/witnesses/victim/gertner-szaja/index.html">Gertner, Szaja</a></li>
+						<li><a href="/g/geysers-of-blood-from-mass-graves/index.html">Geysers of Blood, from Mass Graves</a></li>
+						<li><a href="/g/ghettos/index.html">Ghettos</a></li>
+						<li><a href="/witnesses/victim/glazar-richard/index.html">Glazar, Richard</a></li>
+						<li><a href="/witnesses/perpetrator/globocnik-odilo/index.html">Globocnik, Odilo</a></li>
+						<li><a href="/persons/glucks-richard/index.html">Glücks, Richard</a></li>
+						<li><a href="/persons/politician/goebbels-joseph/index.html">Goebbels, Joseph</a></li>
+						<li><a href="/witnesses/victim/gol-szloma/index.html">Gol, Szloma</a></li>
+						<li><a href="/objects/gold-teeth/index.html">Gold Teeth</a></li>
+						<li><a href="/witnesses/victim/goldberg-szymon/index.html">Goldberg, Szymon</a></li>
+						<li><a href="/witnesses/victim/goldfarb-abraham-i/index.html">Goldfarb, Abraham I.</a></li>
+						<li><a href="/persons/goring-hermann/index.html">Göring, Hermann</a></li>
+						<li><a href="/persons/goth-amon/index.html">Göth, Amon</a></li>
+						<li><a href="/witnesses/perpetrator/grabner-maximilian/index.html">Grabner, Maximilian</a></li>
+						<li><a href="/witnesses/victim/gradowski-salmen/index.html">Gradowski, Salmen</a></li>
+						<li><a href="/witnesses/false-witness/gray-martin/index.html">Gray, Martin</a></li>
+						<li><a href="/locations/country/greece/index.html">Greece</a></li>
+						<li><a href="/witnesses/victim/grocher-mietek/index.html">Grocher, Mietek</a></li>
+						<li><a href="/witnesses/victim/grojanowski-jakov/index.html">Grojanowski, Jakov</a></li>
+						<li><a href="/witnesses/perpetrator/groning-oskar/index.html">Gröning, Oskar</a></li>
+						<li><a href="/instruments/camp/phantom-camp/gross-rosen/index.html">Gross-Rosen</a></li>
+						<li><a href="/persons/grossman-vasily/index.html">Grossman, Vasily</a></li>
+						<li><a href="/categories/concepts/groundwater-level/index.html">Groundwater Level</a></li>
+						<li><a href="/witnesses/victim/gruner-miklos/index.html">Grüner, Miklós</a></li>
+						<li><a href="/witnesses/victim/gulba-franciszek/index.html">Gulba, Franciszek</a></li>
+						<li><a href="/instruments/camp/other-camp/gusen/index.html">Gusen</a></li>
+						<li><a href="/g/gypsies/index.html">Gypsies</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
