--- a/h/index.html
+++ b/h/index.html
@@ -20,39 +20,41 @@
 				H
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/plans-orders/emigration/index.html">Haavara Agreement</a></li>
-					<li><a href="/witnesses/perpetrator/hahle-johannes/index.html">Hähle, Johannes</a></li>
-					<li><a href="/objects/hair-of-deportees/index.html">Hair of Deportees</a></li>
-					<li><a href="/witnesses/victim/hanel-salomea/index.html">Hanel, Salomea</a></li>
-					<li><a href="/locations/other-crime-scene/hartheim/index.html">Hartheim</a></li>
-					<li><a href="/witnesses/perpetrator/hassler-johann/index.html">Hassler, Johann</a></li>
-					<li><a href="/h/healthcare/index.html">Healthcare</a></li>
-					<li><a href="/witnesses/victim/henocque-georges/index.html">Hénocque, Georges</a></li>
-					<li><a href="/witnesses/victim/herman-chaim/index.html">Herman, Chaim</a></li>
-					<li><a href="/persons/heydrich-reinhardt/index.html">Heydrich, Reinhardt</a></li>
-					<li><a href="/h/himmler-speeches/index.html">Himmler Speeches</a></li>
-					<li><a href="/h/himmler-visits/index.html">Himmler Visits</a></li>
-					<li><a href="/persons/himmler-heinrich/index.html">Himmler, Heinrich</a></li>
-					<li><a href="/witnesses/victim/hirszman-chaim/index.html">Hirszman, Chaim</a></li>
-					<li><a href="/witnesses/false-witness/hirt-joseph/index.html">Hirt, Joseph</a></li>
-					<li><a href="/h/hitler-order-final-solution/index.html">Hitler Order, Final Solution</a></li>
-					<li><a href="/persons/hitler-adolf/index.html">Hitler, Adolf</a></li>
-					<li><a href="/witnesses/perpetrator/hofer-fritz/index.html">Höfer, Fritz</a></li>
-					<li><a href="/h/hofle-hans/index.html">Höfle, Hans</a></li>
-					<li><a href="/witnesses/perpetrator/hofmann-ernst/index.html">Hofmann, Ernst</a></li>
-					<li><a href="/h/holocaust-indoctrination/index.html">Holocaust Indoctrination</a></li>
-					<li><a href="/h/holocaust-skepticism-revisionism/index.html">Holocaust Skepticism (Revisionism)</a></li>
-					<li><a href="/h/holocaust-the/index.html">Holocaust, the</a></li>
-					<li><a href="/witnesses/false-witness/holstein-bernard/index.html">Holstein, Bernard</a></li>
-					<li><a href="/h/homicidal-gas-chambers/index.html">Homicidal Gas Chamber</a></li>
-					<li><a href="/h/homosexuals/index.html">Homosexuals</a></li>
-					<li><a href="/h/hoss-rudolf/index.html">Höss, Rudolf</a></li>
-					<li><a href="/persons/hossler-franz/index.html">Hössler, Franz</a></li>
-					<li><a href="/witnesses/perpetrator/hottl-wilhelm/index.html">Höttl, Wilhelm</a></li>
-					<li><a href="/locations/country/hungary/index.html">Hungary</a></li>
-					<li><a href="/toxins-chemicals/hydrogen-cyanide/index.html">Hydrogen Cyanide</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/plans-orders/emigration/index.html">Haavara Agreement</a></li>
+						<li><a href="/witnesses/perpetrator/hahle-johannes/index.html">Hähle, Johannes</a></li>
+						<li><a href="/objects/hair-of-deportees/index.html">Hair of Deportees</a></li>
+						<li><a href="/witnesses/victim/hanel-salomea/index.html">Hanel, Salomea</a></li>
+						<li><a href="/locations/other-crime-scene/hartheim/index.html">Hartheim</a></li>
+						<li><a href="/witnesses/perpetrator/hassler-johann/index.html">Hassler, Johann</a></li>
+						<li><a href="/h/healthcare/index.html">Healthcare</a></li>
+						<li><a href="/witnesses/victim/henocque-georges/index.html">Hénocque, Georges</a></li>
+						<li><a href="/witnesses/victim/herman-chaim/index.html">Herman, Chaim</a></li>
+						<li><a href="/persons/heydrich-reinhardt/index.html">Heydrich, Reinhardt</a></li>
+						<li><a href="/h/himmler-speeches/index.html">Himmler Speeches</a></li>
+						<li><a href="/h/himmler-visits/index.html">Himmler Visits</a></li>
+						<li><a href="/persons/himmler-heinrich/index.html">Himmler, Heinrich</a></li>
+						<li><a href="/witnesses/victim/hirszman-chaim/index.html">Hirszman, Chaim</a></li>
+						<li><a href="/witnesses/false-witness/hirt-joseph/index.html">Hirt, Joseph</a></li>
+						<li><a href="/h/hitler-order-final-solution/index.html">Hitler Order, Final Solution</a></li>
+						<li><a href="/persons/hitler-adolf/index.html">Hitler, Adolf</a></li>
+						<li><a href="/witnesses/perpetrator/hofer-fritz/index.html">Höfer, Fritz</a></li>
+						<li><a href="/h/hofle-hans/index.html">Höfle, Hans</a></li>
+						<li><a href="/witnesses/perpetrator/hofmann-ernst/index.html">Hofmann, Ernst</a></li>
+						<li><a href="/h/holocaust-indoctrination/index.html">Holocaust Indoctrination</a></li>
+						<li><a href="/h/holocaust-skepticism-revisionism/index.html">Holocaust Skepticism (Revisionism)</a></li>
+						<li><a href="/h/holocaust-the/index.html">Holocaust, the</a></li>
+						<li><a href="/witnesses/false-witness/holstein-bernard/index.html">Holstein, Bernard</a></li>
+						<li><a href="/h/homicidal-gas-chambers/index.html">Homicidal Gas Chamber</a></li>
+						<li><a href="/h/homosexuals/index.html">Homosexuals</a></li>
+						<li><a href="/h/hoss-rudolf/index.html">Höss, Rudolf</a></li>
+						<li><a href="/persons/hossler-franz/index.html">Hössler, Franz</a></li>
+						<li><a href="/witnesses/perpetrator/hottl-wilhelm/index.html">Höttl, Wilhelm</a></li>
+						<li><a href="/locations/country/hungary/index.html">Hungary</a></li>
+						<li><a href="/toxins-chemicals/hydrogen-cyanide/index.html">Hydrogen Cyanide</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
