--- a/i/index.html
+++ b/i/index.html
@@ -20,17 +20,19 @@
 				I
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/legal/company/i-g-farbenindustrie-ag/index.html">I.G. Farbenindustrie AG</a></li>
-					<li><a href="/i/instruments-of-extermination/index.html">Instruments, of Extermination</a></li>
-					<li><a href="/plans-orders/intentionality/index.html">Intentionality</a></li>
-					<li><a href="/legal/trial/international-military-tribunal/index.html">International Military Tribunal</a></li>
-					<li><a href="/legal/institution/international-tracing-service-arolsen/index.html">International Tracing Service, Arolsen</a></li>
-					<li><a href="/toxins-chemicals/iron-blue/index.html">Iron Blue</a></li>
-					<li><a href="/witnesses/victim/isacovici-salomon/index.html">Isacovici, Salomón</a></li>
-					<li><a href="/witnesses/perpetrator/israel-bruno/index.html">Israel, Bruno</a></li>
-					<li><a href="/locations/country/italy/index.html">Italy</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/legal/company/i-g-farbenindustrie-ag/index.html">I.G. Farbenindustrie AG</a></li>
+						<li><a href="/i/instruments-of-extermination/index.html">Instruments, of Extermination</a></li>
+						<li><a href="/plans-orders/intentionality/index.html">Intentionality</a></li>
+						<li><a href="/legal/trial/international-military-tribunal/index.html">International Military Tribunal</a></li>
+						<li><a href="/legal/institution/international-tracing-service-arolsen/index.html">International Tracing Service, Arolsen</a></li>
+						<li><a href="/toxins-chemicals/iron-blue/index.html">Iron Blue</a></li>
+						<li><a href="/witnesses/victim/isacovici-salomon/index.html">Isacovici, Salomón</a></li>
+						<li><a href="/witnesses/perpetrator/israel-bruno/index.html">Israel, Bruno</a></li>
+						<li><a href="/locations/country/italy/index.html">Italy</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
