--- a/j/index.html
+++ b/j/index.html
@@ -19,14 +19,16 @@
 			<h2>
 				J
 			</h2>
-			<ul>
-				<li><a href="/j/jager-report/index.html">Jäger Report</a></li>
-				<li><a href="/witnesses/perpetrator/jager-karl/index.html">Jäger, Karl</a></li>
-				<li><a href="/witnesses/victim/jankowski-stanislaw/index.html">Jankowski, Stanisław</a></li>
-				<li><a href="/instruments/camp/other-camp/janowska-camp/index.html">Janowska Camp</a></li>
-				<li><a href="/instruments/camp/mixed-purpose-camp/jasenovac/index.html">Jasenovac</a></li>
-				<li><a href="/j/jehovas-witnesses/index.html">Jehova&rsquo;s Witnesses</a></li>
-			</ul>
+			<div id="toc">
+				<ul>
+					<li><a href="/j/jager-report/index.html">Jäger Report</a></li>
+					<li><a href="/witnesses/perpetrator/jager-karl/index.html">Jäger, Karl</a></li>
+					<li><a href="/witnesses/victim/jankowski-stanislaw/index.html">Jankowski, Stanisław</a></li>
+					<li><a href="/instruments/camp/other-camp/janowska-camp/index.html">Janowska Camp</a></li>
+					<li><a href="/instruments/camp/mixed-purpose-camp/jasenovac/index.html">Jasenovac</a></li>
+					<li><a href="/j/jehovas-witnesses/index.html">Jehova&rsquo;s Witnesses</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
