--- a/k/index.html
+++ b/k/index.html
@@ -20,45 +20,47 @@
 				K
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/witnesses/perpetrator/kaduk-oswald/index.html">Kaduk, Oswald</a></li>
-					<li><a href="/witnesses/perpetrator/kaindl-anton/index.html">Kaindl, Anton</a></li>
-					<li><a href="/persons/kaltenbrunner-ernst/index.html">Kaltenbrunner, Ernst</a></li>
-					<li><a href="/persons/politician/kammler-hans/index.html">Kammler, Hans</a></li>
-					<li><a href="/witnesses/victim/kaper-yakov/index.html">Kaper, Yakov</a></li>
-					<li><a href="/witnesses/victim/karasik-avraham/index.html">Karasik, Avraham</a></li>
-					<li><a href="/witnesses/victim/karolinskij-samij/index.html">Karolinskij, Samij</a></li>
-					<li><a href="/persons/propagandist/karski-jan/index.html">Karski, Jan</a></li>
-					<li><a href="/witnesses/victim/karvat-david/index.html">Karvat, David</a></li>
-					<li><a href="/witnesses/victim/kaufmann-schafranov-sofia/index.html">Kaufmann Schafranov, Sofia</a></li>
-					<li><a href="/witnesses/victim/kaufmann-jeannette/index.html">Kaufmann, Jeannette</a></li>
-					<li><a href="/locations/other-crime-scene/kerch/index.html">Kerch</a></li>
-					<li><a href="/witnesses/victim/kersch-silvia/index.html">Kersch, Silvia</a></li>
-					<li><a href="/witnesses/victim/kertesz-imre/index.html">Kertész, Imre</a></li>
-					<li><a href="/legal/trial/kharkov/index.html">Kharkov</a></li>
-					<li><a href="/witnesses/perpetrator/klehr-josef/index.html">Klehr, Josef</a></li>
-					<li><a href="/witnesses/victim/klein-marc/index.html">Klein, Marc</a></li>
-					<li><a href="/instruments/camp/other-camp/klooga/index.html">Klooga</a></li>
-					<li><a href="/persons/koch-ilse/index.html">Koch, Ilse</a></li>
-					<li><a href="/persons/politician/koch-karl-otto/index.html">Koch, Karl-Otto</a></li>
-					<li><a href="/witnesses/victim/kon-abe/index.html">Kon, Abe</a></li>
-					<li><a href="/witnesses/victim/kon-stanislaw/index.html">Kon, Stanisław</a></li>
-					<li><a href="/persons/politician/korherr-richard/index.html">Korherr, Richard</a></li>
-					<li><a href="/witnesses/victim/korn-moische/index.html">Korn, Moische</a></li>
-					<li><a href="/witnesses/false-witness/kosinski-jerzy/index.html">Kosinski, Jerzy</a></li>
-					<li><a href="/k/kosow-podlaski/index.html">Kosów Podlaski</a></li>
-					<li><a href="/witnesses/bystander/kozak-stanislaw/index.html">Kozak, Stanisław</a></li>
-					<li><a href="/witnesses/perpetrator/kramer-josef/index.html">Kramer, Josef</a></li>
-					<li><a href="/witnesses/victim/kranz-hermine/index.html">Kranz, Hermine</a></li>
-					<li><a href="/legal/trial/krasnodar/index.html">Krasnodar</a></li>
-					<li><a href="/witnesses/victim/kraus-ota/index.html">Kraus, Ota</a></li>
-					<li><a href="/witnesses/perpetrator/kremer-johann-paul/index.html">Kremer, Johann Paul</a></li>
-					<li><a href="/witnesses/victim/krzepicki-abraham/index.html">Krzepicki, Abraham</a></li>
-					<li><a href="/witnesses/victim/kudlik-aleksander/index.html">Kudlik, Aleksander</a></li>
-					<li><a href="/witnesses/victim/kuklia-vladislav/index.html">Kuklia, Vladislav</a></li>
-					<li><a href="/witnesses/victim/kula-michal/index.html">Kula, Michał</a></li>
-					<li><a href="/witnesses/victim/kulka-erich/index.html">Kulka, Erich</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/witnesses/perpetrator/kaduk-oswald/index.html">Kaduk, Oswald</a></li>
+						<li><a href="/witnesses/perpetrator/kaindl-anton/index.html">Kaindl, Anton</a></li>
+						<li><a href="/persons/kaltenbrunner-ernst/index.html">Kaltenbrunner, Ernst</a></li>
+						<li><a href="/persons/politician/kammler-hans/index.html">Kammler, Hans</a></li>
+						<li><a href="/witnesses/victim/kaper-yakov/index.html">Kaper, Yakov</a></li>
+						<li><a href="/witnesses/victim/karasik-avraham/index.html">Karasik, Avraham</a></li>
+						<li><a href="/witnesses/victim/karolinskij-samij/index.html">Karolinskij, Samij</a></li>
+						<li><a href="/persons/propagandist/karski-jan/index.html">Karski, Jan</a></li>
+						<li><a href="/witnesses/victim/karvat-david/index.html">Karvat, David</a></li>
+						<li><a href="/witnesses/victim/kaufmann-schafranov-sofia/index.html">Kaufmann Schafranov, Sofia</a></li>
+						<li><a href="/witnesses/victim/kaufmann-jeannette/index.html">Kaufmann, Jeannette</a></li>
+						<li><a href="/locations/other-crime-scene/kerch/index.html">Kerch</a></li>
+						<li><a href="/witnesses/victim/kersch-silvia/index.html">Kersch, Silvia</a></li>
+						<li><a href="/witnesses/victim/kertesz-imre/index.html">Kertész, Imre</a></li>
+						<li><a href="/legal/trial/kharkov/index.html">Kharkov</a></li>
+						<li><a href="/witnesses/perpetrator/klehr-josef/index.html">Klehr, Josef</a></li>
+						<li><a href="/witnesses/victim/klein-marc/index.html">Klein, Marc</a></li>
+						<li><a href="/instruments/camp/other-camp/klooga/index.html">Klooga</a></li>
+						<li><a href="/persons/koch-ilse/index.html">Koch, Ilse</a></li>
+						<li><a href="/persons/politician/koch-karl-otto/index.html">Koch, Karl-Otto</a></li>
+						<li><a href="/witnesses/victim/kon-abe/index.html">Kon, Abe</a></li>
+						<li><a href="/witnesses/victim/kon-stanislaw/index.html">Kon, Stanisław</a></li>
+						<li><a href="/persons/politician/korherr-richard/index.html">Korherr, Richard</a></li>
+						<li><a href="/witnesses/victim/korn-moische/index.html">Korn, Moische</a></li>
+						<li><a href="/witnesses/false-witness/kosinski-jerzy/index.html">Kosinski, Jerzy</a></li>
+						<li><a href="/k/kosow-podlaski/index.html">Kosów Podlaski</a></li>
+						<li><a href="/witnesses/bystander/kozak-stanislaw/index.html">Kozak, Stanisław</a></li>
+						<li><a href="/witnesses/perpetrator/kramer-josef/index.html">Kramer, Josef</a></li>
+						<li><a href="/witnesses/victim/kranz-hermine/index.html">Kranz, Hermine</a></li>
+						<li><a href="/legal/trial/krasnodar/index.html">Krasnodar</a></li>
+						<li><a href="/witnesses/victim/kraus-ota/index.html">Kraus, Ota</a></li>
+						<li><a href="/witnesses/perpetrator/kremer-johann-paul/index.html">Kremer, Johann Paul</a></li>
+						<li><a href="/witnesses/victim/krzepicki-abraham/index.html">Krzepicki, Abraham</a></li>
+						<li><a href="/witnesses/victim/kudlik-aleksander/index.html">Kudlik, Aleksander</a></li>
+						<li><a href="/witnesses/victim/kuklia-vladislav/index.html">Kuklia, Vladislav</a></li>
+						<li><a href="/witnesses/victim/kula-michal/index.html">Kula, Michał</a></li>
+						<li><a href="/witnesses/victim/kulka-erich/index.html">Kulka, Erich</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
