--- a/m/index.html
+++ b/m/index.html
@@ -20,37 +20,39 @@
 				M
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/locations/other-locations/madagascar/index.html">Madagascar</a></li>
-					<li><a href="/m/majdanek/index.html">Majdanek</a></li>
-					<li><a href="/locations/museum-memorial/majdanek-museum/index.html">Majdanek Museum</a></li>
-					<li><a href="/legal/trial/majdanek-trials/index.html">Majdanek Trials</a></li>
-					<li><a href="/m/maly-trostenets/index.html">Maly Trostenets</a></li>
-					<li><a href="/witnesses/victim/mandelbaum-henryk/index.html">Mandelbaum, Henryk</a></li>
-					<li><a href="/witnesses/victim/mansfeld-geza/index.html">Mansfeld, Géza</a></li>
-					<li><a href="/witnesses/victim/manusevich-david/index.html">Manusevich, David</a></li>
-					<li><a href="/witnesses/false-witness/marco-enric/index.html">Marco, Enric</a></li>
-					<li><a href="/witnesses/victim/marcus-kurt/index.html">Marcus, Kurt</a></li>
-					<li><a href="/locations/other-crime-scene/marijampole/index.html">Marijampole</a></li>
-					<li><a href="/persons/propagandist/marsalek-hans/index.html">Marsalek, Hans</a></li>
-					<li><a href="/locations/other-crime-scene/mass-graves/index.html">Mass Graves</a></li>
-					<li><a href="/m/mauthausen/index.html">Mauthausen</a></li>
-					<li><a href="/persons/politician/mengele-josef/index.html">Mengele, Josef</a></li>
-					<li><a href="/persons/propagandist/mermelstein-mel/index.html">Mermelstein, Mel</a></li>
-					<li><a href="/witnesses/victim/metz-zelda/index.html">Metz, Zelda</a></li>
-					<li><a href="/technologies/microwave-delousing/index.html">Microwave Delousing</a></li>
-					<li><a href="/m/mogilev/index.html">Mogilev</a></li>
-					<li><a href="/witnesses/perpetrator/moll-otto/index.html">Moll, Otto</a></li>
-					<li><a href="/m/monowitz/index.html">Monowitz</a></li>
-					<li><a href="/witnesses/victim/mordowicz-czeslaw/index.html">Mordowicz, Czesław</a></li>
-					<li><a href="/witnesses/perpetrator/morgen-konrad/index.html">Morgen, Konrad</a></li>
-					<li><a href="/objects/morgues/index.html">Morgues</a></li>
-					<li><a href="/m/motives/index.html">Motives</a></li>
-					<li><a href="/witnesses/victim/mottel-samet/index.html">Mottel, Samet</a></li>
-					<li><a href="/witnesses/victim/muller-filip/index.html">Müller, Filip</a></li>
-					<li><a href="/witnesses/perpetrator/munch-hans/index.html">Münch, Hans</a></li>
-					<li><a href="/witnesses/perpetrator/mussfeldt-erich/index.html">Mussfeldt, Erich</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/locations/other-locations/madagascar/index.html">Madagascar</a></li>
+						<li><a href="/m/majdanek/index.html">Majdanek</a></li>
+						<li><a href="/locations/museum-memorial/majdanek-museum/index.html">Majdanek Museum</a></li>
+						<li><a href="/legal/trial/majdanek-trials/index.html">Majdanek Trials</a></li>
+						<li><a href="/m/maly-trostenets/index.html">Maly Trostenets</a></li>
+						<li><a href="/witnesses/victim/mandelbaum-henryk/index.html">Mandelbaum, Henryk</a></li>
+						<li><a href="/witnesses/victim/mansfeld-geza/index.html">Mansfeld, Géza</a></li>
+						<li><a href="/witnesses/victim/manusevich-david/index.html">Manusevich, David</a></li>
+						<li><a href="/witnesses/false-witness/marco-enric/index.html">Marco, Enric</a></li>
+						<li><a href="/witnesses/victim/marcus-kurt/index.html">Marcus, Kurt</a></li>
+						<li><a href="/locations/other-crime-scene/marijampole/index.html">Marijampole</a></li>
+						<li><a href="/persons/propagandist/marsalek-hans/index.html">Marsalek, Hans</a></li>
+						<li><a href="/locations/other-crime-scene/mass-graves/index.html">Mass Graves</a></li>
+						<li><a href="/m/mauthausen/index.html">Mauthausen</a></li>
+						<li><a href="/persons/politician/mengele-josef/index.html">Mengele, Josef</a></li>
+						<li><a href="/persons/propagandist/mermelstein-mel/index.html">Mermelstein, Mel</a></li>
+						<li><a href="/witnesses/victim/metz-zelda/index.html">Metz, Zelda</a></li>
+						<li><a href="/technologies/microwave-delousing/index.html">Microwave Delousing</a></li>
+						<li><a href="/m/mogilev/index.html">Mogilev</a></li>
+						<li><a href="/witnesses/perpetrator/moll-otto/index.html">Moll, Otto</a></li>
+						<li><a href="/m/monowitz/index.html">Monowitz</a></li>
+						<li><a href="/witnesses/victim/mordowicz-czeslaw/index.html">Mordowicz, Czesław</a></li>
+						<li><a href="/witnesses/perpetrator/morgen-konrad/index.html">Morgen, Konrad</a></li>
+						<li><a href="/objects/morgues/index.html">Morgues</a></li>
+						<li><a href="/m/motives/index.html">Motives</a></li>
+						<li><a href="/witnesses/victim/mottel-samet/index.html">Mottel, Samet</a></li>
+						<li><a href="/witnesses/victim/muller-filip/index.html">Müller, Filip</a></li>
+						<li><a href="/witnesses/perpetrator/munch-hans/index.html">Münch, Hans</a></li>
+						<li><a href="/witnesses/perpetrator/mussfeldt-erich/index.html">Mussfeldt, Erich</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
