--- a/p/index.html
+++ b/p/index.html
@@ -20,39 +20,41 @@
 				P
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/categories/concepts/packing-density-inside-gas-chamber/index.html">Packing Density, inside Gas Chamber</a></li>
-					<li><a href="/witnesses/victim/paisikovic-dov/index.html">Paisikovic, Dov</a></li>
-					<li><a href="/witnesses/victim/pankov-vassily/index.html">Pankov, Vassily</a></li>
-					<li><a href="/witnesses/victim/pechersky-alexander/index.html">Pechersky, Alexander</a></li>
-					<li><a href="/witnesses/victim/peer-moshe/index.html">Peer, Moshe</a></li>
-					<li><a href="/witnesses/perpetrator/pfannenstiel-wilhelm/index.html">Pfannenstiel, Wilhelm</a></li>
-					<li><a href="/p/phantom-extermination-camps/index.html">Phantom Extermination Camps</a></li>
-					<li><a href="/toxins-chemicals/phenol/index.html">Phenol</a></li>
-					<li><a href="/witnesses/victim/piazza-bruno/index.html">Piazza, Bruno</a></li>
-					<li><a href="/witnesses/victim/pilecki-witold/index.html">Pilecki, Witold</a></li>
-					<li><a href="/witnesses/perpetrator/piller-walter/index.html">Piller, Walter</a></li>
-					<li><a href="/witnesses/victim/pilo-aaron/index.html">Pilo, Aaron</a></li>
-					<li><a href="/witnesses/victim/pilunov-ivanovich/index.html">Pilunov, Ivanovich</a></li>
-					<li><a href="/p/pinsk/index.html">Pinsk</a></li>
-					<li><a href="/persons/legal-professional/pinter-stephen-f/index.html">Pinter, Stephen F.</a></li>
-					<li><a href="/plans-orders/plan-to-exterminate-the-jews/index.html">Plan, to Exterminate the Jews</a></li>
-					<li><a href="/witnesses/victim/plucer-regina/index.html">Plucer, Regina</a></li>
-					<li><a href="/witnesses/victim/podchlebnik-michal/index.html">Podchlebnik, Michał</a></li>
-					<li><a href="/witnesses/victim/podchlebnik-salomon/index.html">Podchlebnik, Salomon</a></li>
-					<li><a href="/witnesses/perpetrator/pohl-oswald/index.html">Pohl, Oswald</a></li>
-					<li><a href="/locations/country/poland/index.html">Poland</a></li>
-					<li><a href="/persons/propagandist/polevoy-boris/index.html">Polevoy, Boris</a></li>
-					<li><a href="/p/polish-underground-reports/index.html">Polish Underground Reports</a></li>
-					<li><a href="/p/ponary/index.html">Ponary</a></li>
-					<li><a href="/witnesses/victim/poswolski-henryk/index.html">Poswolski, Henryk</a></li>
-					<li><a href="/witnesses/perpetrator/pradel-friedrich/index.html">Pradel, Friedrich</a></li>
-					<li><a href="/technologies/producer-gas/index.html">Producer Gas</a></li>
-					<li><a href="/witnesses/victim/pronicheva-dina/index.html">Pronicheva, Dina</a></li>
-					<li><a href="/manipulation/propaganda/index.html">Propaganda</a></li>
-					<li><a href="/witnesses/victim/puchala-lucjan/index.html">Puchała, Lucjan</a></li>
-					<li><a href="/witnesses/victim/putzker-fritz/index.html">Putzker, Fritz</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/categories/concepts/packing-density-inside-gas-chamber/index.html">Packing Density, inside Gas Chamber</a></li>
+						<li><a href="/witnesses/victim/paisikovic-dov/index.html">Paisikovic, Dov</a></li>
+						<li><a href="/witnesses/victim/pankov-vassily/index.html">Pankov, Vassily</a></li>
+						<li><a href="/witnesses/victim/pechersky-alexander/index.html">Pechersky, Alexander</a></li>
+						<li><a href="/witnesses/victim/peer-moshe/index.html">Peer, Moshe</a></li>
+						<li><a href="/witnesses/perpetrator/pfannenstiel-wilhelm/index.html">Pfannenstiel, Wilhelm</a></li>
+						<li><a href="/p/phantom-extermination-camps/index.html">Phantom Extermination Camps</a></li>
+						<li><a href="/toxins-chemicals/phenol/index.html">Phenol</a></li>
+						<li><a href="/witnesses/victim/piazza-bruno/index.html">Piazza, Bruno</a></li>
+						<li><a href="/witnesses/victim/pilecki-witold/index.html">Pilecki, Witold</a></li>
+						<li><a href="/witnesses/perpetrator/piller-walter/index.html">Piller, Walter</a></li>
+						<li><a href="/witnesses/victim/pilo-aaron/index.html">Pilo, Aaron</a></li>
+						<li><a href="/witnesses/victim/pilunov-ivanovich/index.html">Pilunov, Ivanovich</a></li>
+						<li><a href="/p/pinsk/index.html">Pinsk</a></li>
+						<li><a href="/persons/legal-professional/pinter-stephen-f/index.html">Pinter, Stephen F.</a></li>
+						<li><a href="/plans-orders/plan-to-exterminate-the-jews/index.html">Plan, to Exterminate the Jews</a></li>
+						<li><a href="/witnesses/victim/plucer-regina/index.html">Plucer, Regina</a></li>
+						<li><a href="/witnesses/victim/podchlebnik-michal/index.html">Podchlebnik, Michał</a></li>
+						<li><a href="/witnesses/victim/podchlebnik-salomon/index.html">Podchlebnik, Salomon</a></li>
+						<li><a href="/witnesses/perpetrator/pohl-oswald/index.html">Pohl, Oswald</a></li>
+						<li><a href="/locations/country/poland/index.html">Poland</a></li>
+						<li><a href="/persons/propagandist/polevoy-boris/index.html">Polevoy, Boris</a></li>
+						<li><a href="/p/polish-underground-reports/index.html">Polish Underground Reports</a></li>
+						<li><a href="/p/ponary/index.html">Ponary</a></li>
+						<li><a href="/witnesses/victim/poswolski-henryk/index.html">Poswolski, Henryk</a></li>
+						<li><a href="/witnesses/perpetrator/pradel-friedrich/index.html">Pradel, Friedrich</a></li>
+						<li><a href="/technologies/producer-gas/index.html">Producer Gas</a></li>
+						<li><a href="/witnesses/victim/pronicheva-dina/index.html">Pronicheva, Dina</a></li>
+						<li><a href="/manipulation/propaganda/index.html">Propaganda</a></li>
+						<li><a href="/witnesses/victim/puchala-lucjan/index.html">Puchała, Lucjan</a></li>
+						<li><a href="/witnesses/victim/putzker-fritz/index.html">Putzker, Fritz</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
