--- a/r/index.html
+++ b/r/index.html
@@ -20,37 +20,39 @@
 				R
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/witnesses/victim/rabinowicz-jakub/index.html">Rabinowicz, Jakub</a></li>
-					<li><a href="/witnesses/victim/rajchman-chil/index.html">Rajchman, Chil</a></li>
-					<li><a href="/witnesses/victim/rajgrodzki-jerzy/index.html">Rajgrodzki, Jerzy</a></li>
-					<li><a href="/locations/camps/rajsko/index.html">Rajsko</a></li>
-					<li><a href="/witnesses/victim/rajzman-samuel/index.html">Rajzman, Samuel</a></li>
-					<li><a href="/persons/politician/rascher-sigmund/index.html">Rascher, Sigmund</a></li>
-					<li><a href="/witnesses/victim/rassinier-paul/index.html">Rassinier, Paul</a></li>
-					<li><a href="/witnesses/perpetrator/rauff-walter/index.html">Rauff, Walter</a></li>
-					<li><a href="/instruments/camp/mixed-purpose-camp/ravensbruck/index.html">Ravensbrück</a></li>
-					<li><a href="/witnesses/victim/razgonayev-mikhail/index.html">Razgonayev, Mikhail</a></li>
-					<li><a href="/legal/institution/red-cross/index.html">Red Cross</a></li>
-					<li><a href="/witnesses/victim/reder-rudolf/index.html">Reder, Rudolf</a></li>
-					<li><a href="/r/refeeding-syndrome/index.html">Refeeding Syndrome</a></li>
-					<li><a href="/legal/institution/reichssicherheitshauptamt/index.html">Reichssicherheitshauptamt</a></li>
-					<li><a href="/categories/concepts/religion-holocaust-as/index.html">Religion, Holocaust as</a></li>
-					<li><a href="/witnesses/victim/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
-					<li><a href="/plans-orders/resettlement/index.html">Resettlement</a></li>
-					<li><a href="/persons/propagandist/ringelblum-emanuel/index.html">Ringelblum, Emanuel</a></li>
-					<li><a href="/witnesses/victim/rogerie-andre/index.html">Rogerie, André</a></li>
-					<li><a href="/witnesses/victim/rogner-adolf/index.html">Rögner, Adolf</a></li>
-					<li><a href="/locations/country/romania/index.html">Romania</a></li>
-					<li><a href="/persons/politician/rosenberg-alfred/index.html">Rosenberg, Alfred</a></li>
-					<li><a href="/witnesses/victim/rosenberg-eliyahu/index.html">Rosenberg, Eliyahu</a></li>
-					<li><a href="/witnesses/victim/rosenblat-herman/index.html">Rosenblat, Herman</a></li>
-					<li><a href="/witnesses/victim/rosenblum-joshuah/index.html">Rosenblum, Joshuah</a></li>
-					<li><a href="/witnesses/victim/rosenblum-moritz/index.html">Rosenblum, Moritz</a></li>
-					<li><a href="/witnesses/victim/rosenthal-maryla/index.html">Rosenthal, Maryla</a></li>
-					<li><a href="/witnesses/victim/rosin-arnost/index.html">Rosin, Arnošt</a></li>
-					<li><a href="/locations/other-crime-scene/rumbula/index.html">Rumbula</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/witnesses/victim/rabinowicz-jakub/index.html">Rabinowicz, Jakub</a></li>
+						<li><a href="/witnesses/victim/rajchman-chil/index.html">Rajchman, Chil</a></li>
+						<li><a href="/witnesses/victim/rajgrodzki-jerzy/index.html">Rajgrodzki, Jerzy</a></li>
+						<li><a href="/locations/camps/rajsko/index.html">Rajsko</a></li>
+						<li><a href="/witnesses/victim/rajzman-samuel/index.html">Rajzman, Samuel</a></li>
+						<li><a href="/persons/politician/rascher-sigmund/index.html">Rascher, Sigmund</a></li>
+						<li><a href="/witnesses/victim/rassinier-paul/index.html">Rassinier, Paul</a></li>
+						<li><a href="/witnesses/perpetrator/rauff-walter/index.html">Rauff, Walter</a></li>
+						<li><a href="/instruments/camp/mixed-purpose-camp/ravensbruck/index.html">Ravensbrück</a></li>
+						<li><a href="/witnesses/victim/razgonayev-mikhail/index.html">Razgonayev, Mikhail</a></li>
+						<li><a href="/legal/institution/red-cross/index.html">Red Cross</a></li>
+						<li><a href="/witnesses/victim/reder-rudolf/index.html">Reder, Rudolf</a></li>
+						<li><a href="/r/refeeding-syndrome/index.html">Refeeding Syndrome</a></li>
+						<li><a href="/legal/institution/reichssicherheitshauptamt/index.html">Reichssicherheitshauptamt</a></li>
+						<li><a href="/categories/concepts/religion-holocaust-as/index.html">Religion, Holocaust as</a></li>
+						<li><a href="/witnesses/victim/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
+						<li><a href="/plans-orders/resettlement/index.html">Resettlement</a></li>
+						<li><a href="/persons/propagandist/ringelblum-emanuel/index.html">Ringelblum, Emanuel</a></li>
+						<li><a href="/witnesses/victim/rogerie-andre/index.html">Rogerie, André</a></li>
+						<li><a href="/witnesses/victim/rogner-adolf/index.html">Rögner, Adolf</a></li>
+						<li><a href="/locations/country/romania/index.html">Romania</a></li>
+						<li><a href="/persons/politician/rosenberg-alfred/index.html">Rosenberg, Alfred</a></li>
+						<li><a href="/witnesses/victim/rosenberg-eliyahu/index.html">Rosenberg, Eliyahu</a></li>
+						<li><a href="/witnesses/victim/rosenblat-herman/index.html">Rosenblat, Herman</a></li>
+						<li><a href="/witnesses/victim/rosenblum-joshuah/index.html">Rosenblum, Joshuah</a></li>
+						<li><a href="/witnesses/victim/rosenblum-moritz/index.html">Rosenblum, Moritz</a></li>
+						<li><a href="/witnesses/victim/rosenthal-maryla/index.html">Rosenthal, Maryla</a></li>
+						<li><a href="/witnesses/victim/rosin-arnost/index.html">Rosin, Arnošt</a></li>
+						<li><a href="/locations/other-crime-scene/rumbula/index.html">Rumbula</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
