--- a/t/index.html
+++ b/t/index.html
@@ -20,26 +20,28 @@
 				T
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/witnesses/victim/tabeau-jerzy/index.html">Tabeau, Jerzy</a></li>
-					<li><a href="/witnesses/victim/tauber-henryk/index.html">Tauber, Henryk</a></li>
-					<li><a href="/legal/company/tesch-stabenow/index.html">Tesch &amp; Stabenow</a></li>
-					<li><a href="/persons/tesch-bruno/index.html">Tesch, Bruno</a></li>
-					<li><a href="/locations/ghettos/theresienstadt/index.html">Theresienstadt</a></li>
-					<li><a href="/persons/politician/thilo-heinz/index.html">Thilo, Heinz</a></li>
-					<li><a href="/t/tools-of-mass-murder/index.html">Tools, of Mass Murder</a></li>
-					<li><a href="/legal/company/topf-sohne-j-a/index.html">Topf &amp; Söhne, J.A.</a></li>
-					<li><a href="/t/torture/index.html">Torture</a></li>
-					<li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Towels, Soap, Toothbrushes inside Gas Chambers</a></li>
-					<li><a href="/witnesses/victim/trajtag-josef/index.html">Trajtag, Josef</a></li>
-					<li><a href="/locations/camps/transit-camps/index.html">Transit Camps</a></li>
-					<li><a href="/t/trawniki/index.html">Trawniki</a></li>
-					<li><a href="/t/treblinka/index.html">Treblinka</a></li>
-					<li><a href="/witnesses/victim/trubakov-ziama/index.html">Trubakov, Ziama</a></li>
-					<li><a href="/persons/politician/turner-harald/index.html">Turner, Harald</a></li>
-					<li><a href="/witnesses/victim/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li>
-					<li><a href="/categories/concepts/typhus/index.html">Typhus</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/witnesses/victim/tabeau-jerzy/index.html">Tabeau, Jerzy</a></li>
+						<li><a href="/witnesses/victim/tauber-henryk/index.html">Tauber, Henryk</a></li>
+						<li><a href="/legal/company/tesch-stabenow/index.html">Tesch &amp; Stabenow</a></li>
+						<li><a href="/persons/tesch-bruno/index.html">Tesch, Bruno</a></li>
+						<li><a href="/locations/ghettos/theresienstadt/index.html">Theresienstadt</a></li>
+						<li><a href="/persons/politician/thilo-heinz/index.html">Thilo, Heinz</a></li>
+						<li><a href="/t/tools-of-mass-murder/index.html">Tools, of Mass Murder</a></li>
+						<li><a href="/legal/company/topf-sohne-j-a/index.html">Topf &amp; Söhne, J.A.</a></li>
+						<li><a href="/t/torture/index.html">Torture</a></li>
+						<li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Towels, Soap, Toothbrushes inside Gas Chambers</a></li>
+						<li><a href="/witnesses/victim/trajtag-josef/index.html">Trajtag, Josef</a></li>
+						<li><a href="/locations/camps/transit-camps/index.html">Transit Camps</a></li>
+						<li><a href="/t/trawniki/index.html">Trawniki</a></li>
+						<li><a href="/t/treblinka/index.html">Treblinka</a></li>
+						<li><a href="/witnesses/victim/trubakov-ziama/index.html">Trubakov, Ziama</a></li>
+						<li><a href="/persons/politician/turner-harald/index.html">Turner, Harald</a></li>
+						<li><a href="/witnesses/victim/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li>
+						<li><a href="/categories/concepts/typhus/index.html">Typhus</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
