--- a/f/index.html
+++ b/f/index.html
@@ -20,45 +20,47 @@
 				F
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/witnesses/victim/fabian-bela/index.html">Fabian, Bela</a></li>
-					<li><a href="/witnesses/victim/faitelson-alex/index.html">Faitelson, Alex</a></li>
-					<li><a href="/witnesses/victim/fajgielbaum-srul/index.html">Fajgielbaum, Srul</a></li>
-					<li><a href="/witnesses/victim/falborski-bronislaw/index.html">Falborski, Bronisław</a></li>
-					<li><a href="/witnesses/false-witness/false-witnesses/index.html">False Witnesses</a></li>
-					<li><a href="/categories/concepts/false-memory-syndrome/index.html">False-Memory Syndrome</a></li>
-					<li><a href="/instruments/camp/mixed-purpose-camp/family-camp-at-auschwitz/index.html">Family Camp, at Auschwitz</a></li>
-					<li><a href="/witnesses/victim/farber-yuri/index.html">Farber, Yuri</a></li>
-					<li><a href="/witnesses/victim/farkas-henry/index.html">Farkas, Henry</a></li>
-					<li><a href="/b/bunkers/index.html">farmhouses, makeshift gas chambers at Birkenau</a></li>
-					<li><a href="/f/fat-extracted-from-burning-corpses/index.html">Fat, Extracted from Burning Corpses</a></li>
-					<li><a href="/witnesses/victim/feldhendler-leon/index.html">Feldhendler, Leon</a></li>
-					<li><a href="/witnesses/victim/felenbaum-weiss-hella/index.html">Felenbaum-Weiss, Hella</a></li>
-					<li><a href="/categories/concepts/final-solution/index.html">Final Solution</a></li>
-					<li><a href="/witnesses/victim/finkelsztein-leon/index.html">Finkelsztein, Leon</a></li>
-					<li><a href="/f/first-gassing-at-auschwitz/index.html">First Gassing, at Auschwitz</a></li>
-					<li><a href="/witnesses/victim/fischer-bruno/index.html">Fischer, Bruno</a></li>
-					<li><a href="/witnesses/perpetrator/fischer-horst/index.html">Fischer, Horst</a></li>
-					<li><a href="/f/flames-out-of-crematory-chimneys/index.html">Flames, out of Crematory Chimneys</a></li>
-					<li><a href="/witnesses/victim/fliamenbaum-david/index.html">Fliamenbaum, David</a></li>
-					<li><a href="/persons/politician/florstedt-hermann/index.html">Florstedt, Hermann</a></li>
-					<li><a href="/f/flossenburg/index.html">Flossenbürg</a></li>
-					<li><a href="/f/fort-ix/index.html">Fort IX</a></li>
-					<li><a href="/locations/country/france/index.html">France</a></li>
-					<li><a href="/witnesses/victim/frank-anne/index.html">Frank, Anne</a></li>
-					<li><a href="/persons/frank-hans/index.html">Frank, Hans</a></li>
-					<li><a href="/witnesses/perpetrator/franke-gricksch-alfred/index.html">Franke-Gricksch, Alfred</a></li>
-					<li><a href="/legal/trial/frankfurt-auschwitz-show-trial/index.html">Frankfurt Auschwitz Show Trial</a></li>
-					<li><a href="/witnesses/victim/frankl-viktor/index.html">Frankl, Viktor</a></li>
-					<li><a href="/witnesses/perpetrator/franz-kurt/index.html">Franz, Kurt</a></li>
-					<li><a href="/witnesses/victim/freiberg-ber/index.html">Freiberg, Ber</a></li>
-					<li><a href="/witnesses/victim/friedman-arnold/index.html">Friedman, Arnold</a></li>
-					<li><a href="/witnesses/victim/fries-jakob/index.html">Fries, Jakob</a></li>
-					<li><a href="/persons/politician/fritzsch-karl/index.html">Fritzsch, Karl</a></li>
-					<li><a href="/witnesses/victim/frosch-chaim/index.html">Frosch, Chaim</a></li>
-					<li><a href="/technologies/fumigation-gas-chamber/index.html">Fumigation Gas Chamber</a></li>
-					<li><a href="/technologies/furnace/index.html">Furnace</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/witnesses/victim/fabian-bela/index.html">Fabian, Bela</a></li>
+						<li><a href="/witnesses/victim/faitelson-alex/index.html">Faitelson, Alex</a></li>
+						<li><a href="/witnesses/victim/fajgielbaum-srul/index.html">Fajgielbaum, Srul</a></li>
+						<li><a href="/witnesses/victim/falborski-bronislaw/index.html">Falborski, Bronisław</a></li>
+						<li><a href="/witnesses/false-witness/false-witnesses/index.html">False Witnesses</a></li>
+						<li><a href="/categories/concepts/false-memory-syndrome/index.html">False-Memory Syndrome</a></li>
+						<li><a href="/instruments/camp/mixed-purpose-camp/family-camp-at-auschwitz/index.html">Family Camp, at Auschwitz</a></li>
+						<li><a href="/witnesses/victim/farber-yuri/index.html">Farber, Yuri</a></li>
+						<li><a href="/witnesses/victim/farkas-henry/index.html">Farkas, Henry</a></li>
+						<li><a href="/b/bunkers/index.html">farmhouses, makeshift gas chambers at Birkenau</a></li>
+						<li><a href="/f/fat-extracted-from-burning-corpses/index.html">Fat, Extracted from Burning Corpses</a></li>
+						<li><a href="/witnesses/victim/feldhendler-leon/index.html">Feldhendler, Leon</a></li>
+						<li><a href="/witnesses/victim/felenbaum-weiss-hella/index.html">Felenbaum-Weiss, Hella</a></li>
+						<li><a href="/categories/concepts/final-solution/index.html">Final Solution</a></li>
+						<li><a href="/witnesses/victim/finkelsztein-leon/index.html">Finkelsztein, Leon</a></li>
+						<li><a href="/f/first-gassing-at-auschwitz/index.html">First Gassing, at Auschwitz</a></li>
+						<li><a href="/witnesses/victim/fischer-bruno/index.html">Fischer, Bruno</a></li>
+						<li><a href="/witnesses/perpetrator/fischer-horst/index.html">Fischer, Horst</a></li>
+						<li><a href="/f/flames-out-of-crematory-chimneys/index.html">Flames, out of Crematory Chimneys</a></li>
+						<li><a href="/witnesses/victim/fliamenbaum-david/index.html">Fliamenbaum, David</a></li>
+						<li><a href="/persons/politician/florstedt-hermann/index.html">Florstedt, Hermann</a></li>
+						<li><a href="/f/flossenburg/index.html">Flossenbürg</a></li>
+						<li><a href="/f/fort-ix/index.html">Fort IX</a></li>
+						<li><a href="/locations/country/france/index.html">France</a></li>
+						<li><a href="/witnesses/victim/frank-anne/index.html">Frank, Anne</a></li>
+						<li><a href="/persons/frank-hans/index.html">Frank, Hans</a></li>
+						<li><a href="/witnesses/perpetrator/franke-gricksch-alfred/index.html">Franke-Gricksch, Alfred</a></li>
+						<li><a href="/legal/trial/frankfurt-auschwitz-show-trial/index.html">Frankfurt Auschwitz Show Trial</a></li>
+						<li><a href="/witnesses/victim/frankl-viktor/index.html">Frankl, Viktor</a></li>
+						<li><a href="/witnesses/perpetrator/franz-kurt/index.html">Franz, Kurt</a></li>
+						<li><a href="/witnesses/victim/freiberg-ber/index.html">Freiberg, Ber</a></li>
+						<li><a href="/witnesses/victim/friedman-arnold/index.html">Friedman, Arnold</a></li>
+						<li><a href="/witnesses/victim/fries-jakob/index.html">Fries, Jakob</a></li>
+						<li><a href="/persons/politician/fritzsch-karl/index.html">Fritzsch, Karl</a></li>
+						<li><a href="/witnesses/victim/frosch-chaim/index.html">Frosch, Chaim</a></li>
+						<li><a href="/technologies/fumigation-gas-chamber/index.html">Fumigation Gas Chamber</a></li>
+						<li><a href="/technologies/furnace/index.html">Furnace</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
