--- a/l/index.html
+++ b/l/index.html
@@ -20,35 +20,37 @@
 				L
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/objects/lampshades-of-human-skin/index.html">Lampshades, of Human Skin</a></li>
-					<li><a href="/persons/propagandist/langbein-hermann/index.html">Langbein, Hermann</a></li>
-					<li><a href="/witnesses/victim/langfus-leib/index.html">Langfus, Leib</a></li>
-					<li><a href="/witnesses/victim/laptos-leo/index.html">Laptos, Leo</a></li>
-					<li><a href="/witnesses/expert/larson-charles/index.html">Larson, Charles</a></li>
-					<li><a href="/witnesses/victim/lea-david/index.html">Lea, David</a></li>
-					<li><a href="/witnesses/victim/lengyel-olga/index.html">Lengyel, Olga</a></li>
-					<li><a href="/witnesses/victim/lequeux-maurice/index.html">Lequeux, Maurice</a></li>
-					<li><a href="/witnesses/victim/lerner-leon/index.html">Lerner, Leon</a></li>
-					<li><a href="/witnesses/victim/lesky-simcha/index.html">Lesky, Simcha</a></li>
-					<li><a href="/l/lethal-injections/index.html">Lethal Injections</a></li>
-					<li><a href="/witnesses/victim/lettich-andre/index.html">Lettich, André</a></li>
-					<li><a href="/witnesses/victim/levi-primo/index.html">Levi, Primo</a></li>
-					<li><a href="/witnesses/victim/levy-robert/index.html">Lévy, Robert</a></li>
-					<li><a href="/witnesses/victim/lewental-salmen/index.html">Lewental, Salmen</a></li>
-					<li><a href="/witnesses/victim/lewinska-pelagia/index.html">Lewińska, Pelagia</a></li>
-					<li><a href="/witnesses/victim/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
-					<li><a href="/witnesses/victim/lichtmann-icek/index.html">Lichtmann, Icek</a></li>
-					<li><a href="/persons/politician/liebehenschel-arthur/index.html">Liebehenschel, Arthur</a></li>
-					<li><a href="/witnesses/victim/limousin-henri/index.html">Limousin, Henri</a></li>
-					<li><a href="/witnesses/victim/litwinska-sofia/index.html">Litwinska, Sofia</a></li>
-					<li><a href="/l/lodz-ghetto/index.html">Lodz Ghetto</a></li>
-					<li><a href="/locations/other-locations/london-cage/index.html">London Cage</a></li>
-					<li><a href="/persons/legal-professional/lukaszkiewicz-zdzislaw/index.html">Łukaszkiewicz, Zdzisław</a></li>
-					<li><a href="/technologies/lumberjacks/index.html">Lumberjacks</a></li>
-					<li><a href="/locations/country/luxembourg/index.html">Luxembourg</a></li>
-					<li><a href="/l/lviv/index.html">Lviv</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/objects/lampshades-of-human-skin/index.html">Lampshades, of Human Skin</a></li>
+						<li><a href="/persons/propagandist/langbein-hermann/index.html">Langbein, Hermann</a></li>
+						<li><a href="/witnesses/victim/langfus-leib/index.html">Langfus, Leib</a></li>
+						<li><a href="/witnesses/victim/laptos-leo/index.html">Laptos, Leo</a></li>
+						<li><a href="/witnesses/expert/larson-charles/index.html">Larson, Charles</a></li>
+						<li><a href="/witnesses/victim/lea-david/index.html">Lea, David</a></li>
+						<li><a href="/witnesses/victim/lengyel-olga/index.html">Lengyel, Olga</a></li>
+						<li><a href="/witnesses/victim/lequeux-maurice/index.html">Lequeux, Maurice</a></li>
+						<li><a href="/witnesses/victim/lerner-leon/index.html">Lerner, Leon</a></li>
+						<li><a href="/witnesses/victim/lesky-simcha/index.html">Lesky, Simcha</a></li>
+						<li><a href="/l/lethal-injections/index.html">Lethal Injections</a></li>
+						<li><a href="/witnesses/victim/lettich-andre/index.html">Lettich, André</a></li>
+						<li><a href="/witnesses/victim/levi-primo/index.html">Levi, Primo</a></li>
+						<li><a href="/witnesses/victim/levy-robert/index.html">Lévy, Robert</a></li>
+						<li><a href="/witnesses/victim/lewental-salmen/index.html">Lewental, Salmen</a></li>
+						<li><a href="/witnesses/victim/lewinska-pelagia/index.html">Lewińska, Pelagia</a></li>
+						<li><a href="/witnesses/victim/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
+						<li><a href="/witnesses/victim/lichtmann-icek/index.html">Lichtmann, Icek</a></li>
+						<li><a href="/persons/politician/liebehenschel-arthur/index.html">Liebehenschel, Arthur</a></li>
+						<li><a href="/witnesses/victim/limousin-henri/index.html">Limousin, Henri</a></li>
+						<li><a href="/witnesses/victim/litwinska-sofia/index.html">Litwinska, Sofia</a></li>
+						<li><a href="/l/lodz-ghetto/index.html">Lodz Ghetto</a></li>
+						<li><a href="/locations/other-locations/london-cage/index.html">London Cage</a></li>
+						<li><a href="/persons/legal-professional/lukaszkiewicz-zdzislaw/index.html">Łukaszkiewicz, Zdzisław</a></li>
+						<li><a href="/technologies/lumberjacks/index.html">Lumberjacks</a></li>
+						<li><a href="/locations/country/luxembourg/index.html">Luxembourg</a></li>
+						<li><a href="/l/lviv/index.html">Lviv</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
