--- a/n/index.html
+++ b/n/index.html
@@ -19,21 +19,23 @@
 			<h2>
 				N
 			</h2>
-			<ul>
-				<li><a href="/witnesses/victim/nadsari-marcel/index.html">Nadsari, Marcel</a></li>
-				<li><a href="/witnesses/victim/nagraba-ludwik/index.html">Nagraba, Ludwik</a></li>
-				<li><a href="/witnesses/victim/nahon-marco/index.html">Nahon, Marco</a></li>
-				<li><a href="/n/natzweiler/index.html">Natzweiler</a></li>
-				<li><a href="/persons/politician/nebe-arthur/index.html">Nebe, Arthur</a></li>
-				<li><a href="/locations/country/netherlands/index.html">Netherlands</a></li>
-				<li><a href="/n/neuengamme/index.html">Neuengamme</a></li>
-				<li><a href="/plans-orders/nisko-plan/index.html">Nisko Plan</a></li>
-				<li><a href="/instruments/camp/phantom-camp/nordhausen/index.html">Nordhausen</a></li>
-				<li><a href="/locations/country/norway/index.html">Norway</a></li>
-				<li><a href="/witnesses/victim/nowodowski-dawid/index.html">Nowodowski, Dawid</a></li>
-				<li><a href="/legal/trial/nuremberg-military-tribunals/index.html">Nuremberg Military Tribunals</a></li>
-				<li><a href="/witnesses/victim/nyiszli-miklos/index.html">Nyiszli, Miklos</a></li>
-			</ul>
+			<div id="toc">
+				<ul>
+					<li><a href="/witnesses/victim/nadsari-marcel/index.html">Nadsari, Marcel</a></li>
+					<li><a href="/witnesses/victim/nagraba-ludwik/index.html">Nagraba, Ludwik</a></li>
+					<li><a href="/witnesses/victim/nahon-marco/index.html">Nahon, Marco</a></li>
+					<li><a href="/n/natzweiler/index.html">Natzweiler</a></li>
+					<li><a href="/persons/politician/nebe-arthur/index.html">Nebe, Arthur</a></li>
+					<li><a href="/locations/country/netherlands/index.html">Netherlands</a></li>
+					<li><a href="/n/neuengamme/index.html">Neuengamme</a></li>
+					<li><a href="/plans-orders/nisko-plan/index.html">Nisko Plan</a></li>
+					<li><a href="/instruments/camp/phantom-camp/nordhausen/index.html">Nordhausen</a></li>
+					<li><a href="/locations/country/norway/index.html">Norway</a></li>
+					<li><a href="/witnesses/victim/nowodowski-dawid/index.html">Nowodowski, Dawid</a></li>
+					<li><a href="/legal/trial/nuremberg-military-tribunals/index.html">Nuremberg Military Tribunals</a></li>
+					<li><a href="/witnesses/victim/nyiszli-miklos/index.html">Nyiszli, Miklos</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
