--- a/o/index.html
+++ b/o/index.html
@@ -19,20 +19,22 @@
 			<h2>
 				O
 			</h2>
-			<ul>
-				<li><a href="/witnesses/perpetrator/oberhauser-josef/index.html">Oberhauser, Josef</a></li>
-				<li><a href="/witnesses/victim/obrycki-narcyz-tadeusz/index.html">Obrycki, Narcyz Tadeusz</a></li>
-				<li><a href="/witnesses/victim/ochshorn-isaac-egon/index.html">Ochshorn, Isaac Egon</a></li>
-				<li><a href="/legal/institution/office-of-special-investigations/index.html">Office of Special Investigations</a></li>
-				<li><a href="/witnesses/perpetrator/ohlendorf-otto/index.html">Ohlendorf, Otto</a></li>
-				<li><a href="/locations/camps/ohrdruf/index.html">Ohrdruf</a></li>
-				<li><a href="/witnesses/victim/olere-david/index.html">Olère, David</a></li>
-				<li><a href="/o/open-air-incinerations/index.html">Open-Air Incinerations</a></li>
-				<li><a href="/o/operation-harvest-festival/index.html">Operation <q>Harvest Festival</q></a></li>
-				<li><a href="/locations/camps/oranienburg/index.html">Oranienburg</a></li>
-				<li><a href="/witnesses/victim/ostrovsky-leonid/index.html">Ostrovsky, Leonid</a></li>
-				<li><a href="/legal/company/ostrowski-company/index.html">Ostrowski Company</a></li>
-			</ul>
+			<div id="toc">
+				<ul>
+					<li><a href="/witnesses/perpetrator/oberhauser-josef/index.html">Oberhauser, Josef</a></li>
+					<li><a href="/witnesses/victim/obrycki-narcyz-tadeusz/index.html">Obrycki, Narcyz Tadeusz</a></li>
+					<li><a href="/witnesses/victim/ochshorn-isaac-egon/index.html">Ochshorn, Isaac Egon</a></li>
+					<li><a href="/legal/institution/office-of-special-investigations/index.html">Office of Special Investigations</a></li>
+					<li><a href="/witnesses/perpetrator/ohlendorf-otto/index.html">Ohlendorf, Otto</a></li>
+					<li><a href="/locations/camps/ohrdruf/index.html">Ohrdruf</a></li>
+					<li><a href="/witnesses/victim/olere-david/index.html">Olère, David</a></li>
+					<li><a href="/o/open-air-incinerations/index.html">Open-Air Incinerations</a></li>
+					<li><a href="/o/operation-harvest-festival/index.html">Operation <q>Harvest Festival</q></a></li>
+					<li><a href="/locations/camps/oranienburg/index.html">Oranienburg</a></li>
+					<li><a href="/witnesses/victim/ostrovsky-leonid/index.html">Ostrovsky, Leonid</a></li>
+					<li><a href="/legal/company/ostrowski-company/index.html">Ostrowski Company</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
