--- a/s/index.html
+++ b/s/index.html
@@ -20,69 +20,71 @@
 				S
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html">Sachsenhausen</a></li>
-					<li><a href="/witnesses/victim/sackar-josef/index.html">Sackar, Josef</a></li>
-					<li><a href="/witnesses/victim/sadowska-rajzla/index.html">Sadowska, Rajzla</a></li>
-					<li><a href="/technologies/saunas/index.html">Saunas</a></li>
-					<li><a href="/legal/company/saurer-company/index.html">Saurer Company</a></li>
-					<li><a href="/witnesses/victim/schellekes-maurice/index.html">Schellekes, Maurice</a></li>
-					<li><a href="/witnesses/expert/schelvis-jules/index.html">Schelvis, Jules</a></li>
-					<li><a href="/s/schindlers-list-movie/index.html">Schindler&rsquo;s List, movie</a></li>
-					<li><a href="/witnesses/victim/schwarz-deszo/index.html">Schwarz, Deszö</a></li>
-					<li><a href="/witnesses/victim/schwarzbart-ignacy/index.html">Schwarzbart, Ignacy</a></li>
-					<li><a href="/persons/politician/schwela-siegfried/index.html">Schwela, Siegfried</a></li>
-					<li><a href="/persons/legal-professional/sehn-jan/index.html">Sehn, Jan</a></li>
-					<li><a href="/witnesses/victim/seidenwurm-wrzos-mary/index.html">Seidenwurm Wrzos, Mary</a></li>
-					<li><a href="/categories/concepts/selections/index.html">Selections</a></li>
-					<li><a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a></li>
-					<li><a href="/locations/camps/semlin/index.html">Semlin</a></li>
-					<li><a href="/categories/locations/other-locations/shanghai/index.html">Shanghai</a></li>
-					<li><a href="/persons/legal-professional/sheftel-yoram/index.html">Sheftel, Yoram</a></li>
-					<li><a href="/objects/shoes-of-deportees/index.html">Shoes of Deportees</a></li>
-					<li><a href="/legal/trial/show-trials/index.html">Show Trials</a></li>
-					<li><a href="/s/showers/index.html">Showers</a></li>
-					<li><a href="/s/shrunken-heads-myth-of/index.html">Shrunken Heads, Myth of</a></li>
-					<li><a href="/persons/propagandist/silberschein-abraham/index.html">Silberschein, Abraham</a></li>
-					<li><a href="/persons/legal-professional/simpson-gordon/index.html">Simpson, Gordon</a></li>
-					<li><a href="/s/six-million/index.html">Six Million (Jewish Victims)</a></li>
-					<li><a href="/witnesses/victim/skarzynski-kazimierz/index.html">Skarżyński, Kazimierz</a></li>
-					<li><a href="/locations/country/slovakia/index.html">Slovakia</a></li>
-					<li><a href="/s/soap-from-jewish-corpses/index.html">Soap, from Jewish Corpses</a></li>
-					<li><a href="/locations/camps/sobibor/index.html">Sobibór</a></li>
-					<li><a href="/witnesses/victim/sompolinski-roman/index.html">Sompolinski, Roman</a></li>
-					<li><a href="/categories/concepts/sonderkommando/index.html">Sonderkommando</a></li>
-					<li><a href="/categories/concepts/source-criticism/index.html">Source Criticism</a></li>
-					<li><a href="/locations/country/soviet-union/index.html">Soviet Union</a></li>
-					<li><a href="/persons/spanner-rudolf/index.html">Spanner, Rudolf</a></li>
-					<li><a href="/s/special-treatment/index.html">Special Treatment</a></li>
-					<li><a href="/persons/politician/speer-albert/index.html">Speer, Albert</a></li>
-					<li><a href="/witnesses/victim/springer-elisa/index.html">Springer, Elisa</a></li>
-					<li><a href="/witnesses/victim/srebrnik-szymon/index.html">Srebrnik, Szymon</a></li>
-					<li><a href="/s/stahlecker-reports/index.html">Stahlecker Reports</a></li>
-					<li><a href="/persons/politician/stahlecker-walter/index.html">Stahlecker, Walter</a></li>
-					<li><a href="/s/standing-upright-dead-gassing-victims/index.html">Standing Upright, Dead Gassing Victims</a></li>
-					<li><a href="/witnesses/victim/stanek-franciszek/index.html">Stanek, Franciszek</a></li>
-					<li><a href="/witnesses/perpetrator/stangl-franz/index.html">Stangl, Franz</a></li>
-					<li><a href="/witnesses/perpetrator/stark-hans/index.html">Stark, Hans</a></li>
-					<li><a href="/persons/propagandist/steiner-jean-francois/index.html">Steiner, Jean-François</a></li>
-					<li><a href="/witnesses/victim/stern-ursula/index.html">Stern, Ursula</a></li>
-					<li><a href="/witnesses/victim/steyuk-yakov/index.html">Steyuk, Yakov</a></li>
-					<li><a href="/witnesses/victim/strawczynski-oskar/index.html">Strawczyński, Oskar</a></li>
-					<li><a href="/persons/politician/streicher-julius/index.html">Streicher, Julius</a></li>
-					<li><a href="/witnesses/victim/strummer-deli/index.html">Strummer, Deli</a></li>
-					<li><a href="/locations/camps/stutthof/index.html">Stutthof</a></li>
-					<li><a href="/witnesses/perpetrator/suchomel-franz/index.html">Suchomel, Franz</a></li>
-					<li><a href="/witnesses/victim/sulkowski-jan/index.html">Sułkowski, Jan</a></li>
-					<li><a href="/s/survivors/index.html">Survivors</a></li>
-					<li><a href="/witnesses/victim/suss-franz/index.html">Süss, Franz</a></li>
-					<li><a href="/objects/swimming-pool/index.html">Swimming Pool</a></li>
-					<li><a href="/witnesses/victim/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li>
-					<li><a href="/persons/propagandist/szende-stefan/index.html">Szende, Stefan</a></li>
-					<li><a href="/s/szlamek-report/index.html">Szlamek Report</a></li>
-					<li><a href="/witnesses/victim/szmajzner-stanislaw/index.html">Szmajzner, Stanisław</a></li>
-					<li><a href="/witnesses/victim/szperling-henike/index.html">Szperling, Henike</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html">Sachsenhausen</a></li>
+						<li><a href="/witnesses/victim/sackar-josef/index.html">Sackar, Josef</a></li>
+						<li><a href="/witnesses/victim/sadowska-rajzla/index.html">Sadowska, Rajzla</a></li>
+						<li><a href="/technologies/saunas/index.html">Saunas</a></li>
+						<li><a href="/legal/company/saurer-company/index.html">Saurer Company</a></li>
+						<li><a href="/witnesses/victim/schellekes-maurice/index.html">Schellekes, Maurice</a></li>
+						<li><a href="/witnesses/expert/schelvis-jules/index.html">Schelvis, Jules</a></li>
+						<li><a href="/s/schindlers-list-movie/index.html">Schindler&rsquo;s List, movie</a></li>
+						<li><a href="/witnesses/victim/schwarz-deszo/index.html">Schwarz, Deszö</a></li>
+						<li><a href="/witnesses/victim/schwarzbart-ignacy/index.html">Schwarzbart, Ignacy</a></li>
+						<li><a href="/persons/politician/schwela-siegfried/index.html">Schwela, Siegfried</a></li>
+						<li><a href="/persons/legal-professional/sehn-jan/index.html">Sehn, Jan</a></li>
+						<li><a href="/witnesses/victim/seidenwurm-wrzos-mary/index.html">Seidenwurm Wrzos, Mary</a></li>
+						<li><a href="/categories/concepts/selections/index.html">Selections</a></li>
+						<li><a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a></li>
+						<li><a href="/locations/camps/semlin/index.html">Semlin</a></li>
+						<li><a href="/categories/locations/other-locations/shanghai/index.html">Shanghai</a></li>
+						<li><a href="/persons/legal-professional/sheftel-yoram/index.html">Sheftel, Yoram</a></li>
+						<li><a href="/objects/shoes-of-deportees/index.html">Shoes of Deportees</a></li>
+						<li><a href="/legal/trial/show-trials/index.html">Show Trials</a></li>
+						<li><a href="/s/showers/index.html">Showers</a></li>
+						<li><a href="/s/shrunken-heads-myth-of/index.html">Shrunken Heads, Myth of</a></li>
+						<li><a href="/persons/propagandist/silberschein-abraham/index.html">Silberschein, Abraham</a></li>
+						<li><a href="/persons/legal-professional/simpson-gordon/index.html">Simpson, Gordon</a></li>
+						<li><a href="/s/six-million/index.html">Six Million (Jewish Victims)</a></li>
+						<li><a href="/witnesses/victim/skarzynski-kazimierz/index.html">Skarżyński, Kazimierz</a></li>
+						<li><a href="/locations/country/slovakia/index.html">Slovakia</a></li>
+						<li><a href="/s/soap-from-jewish-corpses/index.html">Soap, from Jewish Corpses</a></li>
+						<li><a href="/locations/camps/sobibor/index.html">Sobibór</a></li>
+						<li><a href="/witnesses/victim/sompolinski-roman/index.html">Sompolinski, Roman</a></li>
+						<li><a href="/categories/concepts/sonderkommando/index.html">Sonderkommando</a></li>
+						<li><a href="/categories/concepts/source-criticism/index.html">Source Criticism</a></li>
+						<li><a href="/locations/country/soviet-union/index.html">Soviet Union</a></li>
+						<li><a href="/persons/spanner-rudolf/index.html">Spanner, Rudolf</a></li>
+						<li><a href="/s/special-treatment/index.html">Special Treatment</a></li>
+						<li><a href="/persons/politician/speer-albert/index.html">Speer, Albert</a></li>
+						<li><a href="/witnesses/victim/springer-elisa/index.html">Springer, Elisa</a></li>
+						<li><a href="/witnesses/victim/srebrnik-szymon/index.html">Srebrnik, Szymon</a></li>
+						<li><a href="/s/stahlecker-reports/index.html">Stahlecker Reports</a></li>
+						<li><a href="/persons/politician/stahlecker-walter/index.html">Stahlecker, Walter</a></li>
+						<li><a href="/s/standing-upright-dead-gassing-victims/index.html">Standing Upright, Dead Gassing Victims</a></li>
+						<li><a href="/witnesses/victim/stanek-franciszek/index.html">Stanek, Franciszek</a></li>
+						<li><a href="/witnesses/perpetrator/stangl-franz/index.html">Stangl, Franz</a></li>
+						<li><a href="/witnesses/perpetrator/stark-hans/index.html">Stark, Hans</a></li>
+						<li><a href="/persons/propagandist/steiner-jean-francois/index.html">Steiner, Jean-François</a></li>
+						<li><a href="/witnesses/victim/stern-ursula/index.html">Stern, Ursula</a></li>
+						<li><a href="/witnesses/victim/steyuk-yakov/index.html">Steyuk, Yakov</a></li>
+						<li><a href="/witnesses/victim/strawczynski-oskar/index.html">Strawczyński, Oskar</a></li>
+						<li><a href="/persons/politician/streicher-julius/index.html">Streicher, Julius</a></li>
+						<li><a href="/witnesses/victim/strummer-deli/index.html">Strummer, Deli</a></li>
+						<li><a href="/locations/camps/stutthof/index.html">Stutthof</a></li>
+						<li><a href="/witnesses/perpetrator/suchomel-franz/index.html">Suchomel, Franz</a></li>
+						<li><a href="/witnesses/victim/sulkowski-jan/index.html">Sułkowski, Jan</a></li>
+						<li><a href="/s/survivors/index.html">Survivors</a></li>
+						<li><a href="/witnesses/victim/suss-franz/index.html">Süss, Franz</a></li>
+						<li><a href="/objects/swimming-pool/index.html">Swimming Pool</a></li>
+						<li><a href="/witnesses/victim/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li>
+						<li><a href="/persons/propagandist/szende-stefan/index.html">Szende, Stefan</a></li>
+						<li><a href="/s/szlamek-report/index.html">Szlamek Report</a></li>
+						<li><a href="/witnesses/victim/szmajzner-stanislaw/index.html">Szmajzner, Stanisław</a></li>
+						<li><a href="/witnesses/victim/szperling-henike/index.html">Szperling, Henike</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
